syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Empty {}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrders {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(Empty) returns (ListOrders);
}
